--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Research"
+    url: /research/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
+  - title: "Publications"
+    url: /Publications/
+    
   - title: "Blog Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  
+  - title: "Grand public (en français)"
+    url: /Public/      
+ 
