--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,16 @@
 # main links links
 main:
+  
+  
   - title: "Research"
     url: /research/    
     
   - title: "Publications"
     url: /Publications/
-    
+
+  - title: "CV"
+    url: /CV/ 
+    #url: /files/CV_JFouchard_En.pdf
   - title: "Blog Posts"
     url: /year-archive/
   
