--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
     url: /Publications/
 
   - title: "CV"
-    url: /CV/ 
-    #url: /files/CV_JFouchard_En.pdf
+    #url: /CV/ 
+    url: /files/CV_JFouchard_En.pdf
     
   - title: "Blog Posts"
     url: /year-archive/
