--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
     url: /research/    
     
   - title: "Publications"
-    url: /Publications/
+    url: /publications/
 
   - title: "CV"
     #url: /CV/ 
