--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Jon Fouchard's homepage"
 title_separator          : "-"
 name                     : &name "Jonathan Fouchard"
 description              : &description "personal description"
-url                      : https://jonfouch.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://jonfouchard.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : /perso.github.io # the subpath of your site, e.g. "/blog"
 repository               : 
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
