--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Jon Fouchard's homepage"
+title                    : "Jonathan Fouchard's homepage"
 title_separator          : "-"
 name                     : &name "Jonathan Fouchard"
 description              : &description "personal description"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jonathan Fouchard"
-  avatar           : "profile.png"
+  avatar           : "images/Photo_Jon_light.jpg"
   bio              : 
   location         : "IBPS, Sorbonne Université, Paris"
   employer         : "CNRS"
