--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ analytics:
 # Site Author
 author:
   name             : "Jonathan Fouchard"
-  avatar           : "https://jonfouchard.github.io/perso.github.io/images/Photo_Jon_light.jpg"
+  avatar           : "Photo_Jon_light.jpg"
   bio              : 
   location         : "IBPS, Sorbonne Université, Paris"
   employer         : "CNRS"
-  pubmed           : 
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=jonathan+fouchard"
   googlescholar    : "https://scholar.google.com/citations?user=GuEvrfgAAAAJ&hl=fr&oi=ao"
   email            : "jonathan.fouchard@sorbonne-universite.fr"
   researchgate     : 
